2010-04-16  Tim Waugh <twaugh@redhat.com>

	* db/source/printer/HP-DeskJet_F2100.xml: Corrected IEEE 1284
	  Device ID (RH bug #579245).
	* db/source/printer/HP-OfficeJet_7300.xml: Removed incorrect
	  extra IEEE 1284 Device ID (RH bug #577897).
	* db/source/printer/Lexmark-E120.xml: Added IEEE 1284 Device
	  ID (RH bug #577881).
	* db/source/printer/HP-DeskJet_1280.xml: Added IEEE 1284
	  Device ID (RH bug #577870).
	* db/source/printer/HP-PhotoSmart_7400.xml: Added IEEE 1284
	  Device ID (RH bug #577866).
	* db/source/printer/Brother-HL-2140.xml: Added IEEE 1284
	  Device ID (RH bug #577863).
	* db/source/printer/HP-OfficeJet_6200.xml: Corrected IEEE 1284
	  Device ID (RH bug #215063).
	* db/source/printer/HP-PSC_2400.xml: Corrected IEEE 1284
	  Device ID (RH bug #188419).

2010-03-26  Tim Waugh <twaugh@redhat.com>

	* db/source/printer/HP-PhotoSmart_2570.xml: Corrected IEEE
	  1284 Device ID (RH bug #577280).
	* db/source/printer/HP-DeskJet_959C.xml: Added IEEE 1284
	  Device ID (RH bug #577293).
	* db/source/printer/HP-OfficeJet_Pro_K550.xml: Corrected IEEE
	  1284 Device ID (RH bug #577294).

2010-03-26  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/opt/GS-HalftoningAlgorithm-Gray.xml: Code snippets to
	  insert into the driver command line got truncated by too small
	  fields in the MySQL database on the OpenPrinting web
	  server (Ubuntu bug #541690).

2010-03-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/splix.xml, printer/Samsung-CLP-300.xml,
	  printer/Samsung-CLP-310.xml, printer/Samsung-CLP-315.xml: The
	  Samsung CLP-300, CLP-310, CLP-315, are compatible with each other,
	  added entry for the CLP-300, added CLP-315 to the "splix" driver,
	  updated the texts and made "splix" the recommended driver for all
	  the three.

2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/sparc.xml, driver/nwp533.xml: Removed driver entries for
	  Ghostscript drivers which do not build on standard Linux/Unix