@@ -17,10 +17,9 @@
   </lang>
   <autodetect>
     <usb>
-      <commandset>LDL,DYN</commandset>
-      <description>Deskjet D2300</description>
-      <manufacturer>hp</manufacturer>
-      <model>Deskjet D2300</model>
+      <commandset>LDL</commandset>
+      <manufacturer>HP</manufacturer>
+      <model>Deskjet D2300 series</model>
     </usb>
   </autodetect>
   <functionality>B</functionality>
