@@ -1,5 +1,7 @@
 2010-04-16  Tim Waugh <twaugh@redhat.com>
 
+	* db/source/printer/HP-DeskJet_D2300.xml: Added IEEE 1284
+	  Device ID (RH bug #580341).
 	* db/source/printer/HP-DeskJet_F2100.xml: Corrected IEEE 1284
 	  Device ID (RH bug #579245).
 	* db/source/printer/HP-OfficeJet_7300.xml: Removed incorrect
